# busca_advogado

./: .gitignore  README.md  cna.txt  pyproject.toml
cna/: cna.csv  main.py
cna_advogado/: app.py  main.py
