[tool.poetry]
name = "cna"
version = "0.1.0"
description = ""
authors = ["levyvix <levy.vix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest-playwright = "^0.5.0"
typer = "^0.12.3"


[tool.poetry.scripts]
cna = "cna.main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
